# agentic-backend

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  package.json  pyproject.toml
apps/ninja-api/: pyproject.toml
apps/ninja-api/src/ninja_api/: __init__.py  app.py  chat.py  startup.py
apps/ninja-api/tests/: conftest.py  test_app.py  test_chat.py  test_startup.py
apps/ninja-setup-assistant/: pyproject.toml
apps/ninja-setup-assistant/src/ninja_setup_assistant/: __init__.py  assistant.py  prompts.py  runner.py  tools.py
apps/ninja-setup-assistant/tests/: test_assistant.py  test_prompts.py  test_runner.py  test_tools.py  test_tools_safety.py
apps/ninja-test-app/: pyproject.toml
apps/ninja-test-app/src/ninja_test_app/: __init__.py
apps/ninja-test-app/tests/: test_ninja_test_app_imports.py
libs/ninja-agents/: pyproject.toml
libs/ninja-agents/src/ninja_agents/: __init__.py  base.py  orchestrator.py  safety.py  tools.py  tracing.py
libs/ninja-agents/src/ninja_agents/templates/: __init__.py  coordinator_agent.yaml  data_agent.yaml  (+1 more)
libs/ninja-agents/tests/: conftest.py  test_agents_base.py  test_agents_imports.py  test_agents_orchestrator.py  test_agents_safety.py  test_agents_templates.py  test_agents_tools.py  test_agents_tracing.py  test_base.py  test_ninja_agents_imports.py  test_orchestrator.py  test_tools.py  test_tracing.py
libs/ninja-auth/: pyproject.toml
libs/ninja-auth/src/ninja_auth/: __init__.py  agent_context.py  config.py  context.py  errors.py  gateway.py  rate_limiter.py  rbac.py  revocation.py  router.py  state_store.py  user_store.py
libs/ninja-auth/tests/: conftest.py  test_auth_agent_context.py  test_auth_apikey.py  test_auth_bearer.py  test_auth_config.py  test_auth_context.py  test_auth_gateway.py  test_auth_identity.py  test_auth_imports.py  test_auth_oauth2.py  test_auth_router.py  test_gateway_rate_limit.py  test_gateway_revocation.py  test_identity_jti.py  test_identity_rate_limit.py  test_rate_limiter.py  test_rbac.py  test_rbac_agent.py  test_rbac_config.py  test_rbac_gateway.py  test_revocation_store.py  test_state_store.py
libs/ninja-boundary/: pyproject.toml
libs/ninja-boundary/src/ninja_boundary/: __init__.py  audit.py  boundary.py  coercion.py  defaults.py  drift.py  tuner.py  validators.py
libs/ninja-boundary/tests/: test_audit.py  test_boundary.py  test_coercion.py  test_defaults.py  test_drift.py  test_ninja_boundary_imports.py  test_tuner.py  test_validators.py
libs/ninja-cli/: pyproject.toml
libs/ninja-cli/src/ninja_cli/: __init__.py  cli.py  config.py  state.py
libs/ninja-cli/tests/: test_ninja_cli_commands.py  test_ninja_cli_config.py  test_ninja_cli_imports.py  test_ninja_cli_state.py
libs/ninja-codegen/: pyproject.toml
libs/ninja-codegen/src/ninja_codegen/: __init__.py  differ.py  engine.py
libs/ninja-codegen/tests/: conftest.py  test_codegen_safety.py  test_codegen_template_security.py  test_differ.py  test_engine.py  test_generators.py  test_ninja_codegen_imports.py
libs/ninja-core/: pyproject.toml
libs/ninja-core/src/ninja_core/: __init__.py  security.py
libs/ninja-core/tests/: test_core_imports.py  test_entity.py  test_name_validation.py  test_relationship.py  test_schema_safety.py  test_schema_validation.py  test_security.py  test_serialization.py
libs/ninja-deploy/: pyproject.toml
libs/ninja-deploy/src/ninja_deploy/: __init__.py  ci_generator.py  docker_generator.py  helm_generator.py  k8s_generator.py
libs/ninja-deploy/tests/: conftest.py  test_deploy_ci.py  test_deploy_docker.py  test_deploy_helm.py  test_deploy_imports.py  test_deploy_k8s.py  test_deploy_template_security.py
libs/ninja-devloop/: pyproject.toml
libs/ninja-devloop/src/ninja_devloop/: __init__.py  board_controller.py  cli.py  github_client.py  models.py  transitions.py
libs/ninja-devloop/tests/: test_board_controller.py  test_models.py  test_transitions.py
libs/ninja-gql/: pyproject.toml
libs/ninja-gql/src/ninja_gql/: __init__.py  csrf.py  event_bus.py  generator.py  rate_limit.py  schema.py  security.py  validation.py
libs/ninja-gql/tests/: conftest.py  test_csrf.py  test_generator.py  test_mutation_auth.py  test_ninja_gql_imports.py  test_rate_limit.py  test_schema.py  test_security.py  test_subscriptions.py  test_validation.py
libs/ninja-graph/: pyproject.toml
libs/ninja-graph/src/ninja_graph/: __init__.py  community.py  linker.py  loader.py  mapper.py  memory_backend.py  protocols.py  tools.py
libs/ninja-graph/tests/: conftest.py  test_community.py  test_graph_tools.py  test_linker.py  test_loader.py  test_mapper.py  test_memory_backend.py  test_ninja_graph_imports.py
libs/ninja-introspect/: pyproject.toml
libs/ninja-introspect/src/ninja_introspect/: __init__.py  engine.py
libs/ninja-introspect/tests/: test_engine.py  test_graph_provider.py  test_mongo_provider.py  test_ninja_introspect_imports.py  test_sql_provider.py  test_vector_provider.py
libs/ninja-models/: pyproject.toml
libs/ninja-models/src/ninja_models/: __init__.py  config.py  cost_tracker.py  litellm_bridge.py  resolver.py
libs/ninja-models/tests/: test_config.py  test_cost_tracker.py  test_litellm_bridge.py  test_ninja_models_imports.py  test_resolver.py
libs/ninja-persistence/: pyproject.toml
libs/ninja-persistence/src/ninja_persistence/: __init__.py  connections.py  exceptions.py  protocols.py  registry.py
libs/ninja-persistence/tests/: test_chroma_adapter_errors.py  test_connections.py  test_embedding_strategy.py  test_exceptions.py  test_graph_adapter.py  test_limit_validation.py  test_milvus_adapter.py  test_mongo_adapter.py  test_mongo_adapter_errors.py  test_ninja_persistence_imports.py  test_offset_pagination.py  test_protocols.py  test_registry.py  test_sql_adapter.py  test_sql_adapter_errors.py
libs/ninja-ui/: pyproject.toml
libs/ninja-ui/src/ninja_ui/: __init__.py  generator.py  server.py
libs/ninja-ui/tests/: conftest.py  test_ui_chat.py  test_ui_crud.py  test_ui_generator.py  test_ui_graphql_injection.py  test_ui_security.py  test_ui_server.py  test_ui_shared.py  test_ui_template_security.py
(+209 files in other folders)
