[project]
name = "agentic-backend"
version = "0.1.0"
description = "Ninja Stack — schema-first agentic backend framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja-agents",
    "ninja-api",
    "ninja-auth",
    "ninja-boundary",
    "ninja-cli",
    "ninja-codegen",
    "ninja-core",
    "ninja-introspect",
    "ninja-models",
    "ninja-setup-assistant",
    "ninja-test-app",
    "ninja-test-lib",
]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[tool.uv.sources]
ninja-agents = { workspace = true }
ninja-api = { workspace = true }
ninja-auth = { workspace = true }
ninja-boundary = { workspace = true }
ninja-cli = { workspace = true }
ninja-codegen = { workspace = true }
ninja-core = { workspace = true }
ninja-introspect = { workspace = true }
ninja-models = { workspace = true }
ninja-setup-assistant = { workspace = true }
ninja-test-app = { workspace = true }
ninja-test-lib = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["libs/*/tests", "apps/*/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
