[project]
name = "ninja-api"
version = "0.1.0"
description = "Ninja API — FastAPI/GraphQL composition shell"
requires-python = ">=3.12"
dependencies = ["ninja-core", "ninja-auth"]

[tool.uv.sources]
ninja-core = { workspace = true }
ninja-auth = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_api"]
