[project]
name = "ninja-api"
version = "0.1.0"
description = "Ninja API — FastAPI/GraphQL composition shell"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "strawberry-graphql[fastapi]>=0.236",
    "sse-starlette>=2.0",
    "ninja-core",
    "ninja-auth",
    "ninja-gql",
    "ninja-agents",
    "ninja-persistence",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.25",
]

[tool.uv.sources]
ninja-core = { workspace = true }
ninja-auth = { workspace = true }
ninja-gql = { workspace = true }
ninja-agents = { workspace = true }
ninja-persistence = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_api"]
