[project]
name = "ninja-setup-assistant"
version = "0.1.0"
description = "Ninja Setup Assistant — conversational CLI for ninjastack init"
requires-python = ">=3.12"
dependencies = ["ninja-core"]

[tool.uv.sources]
ninja-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_setup_assistant"]
