[project]
name = "ninja-test-app"
version = "0.1.0"
description = "Test app to validate scaffolding templates"
requires-python = ">=3.12"
dependencies = ["ninja-core", "ninja-test-lib"]

[tool.uv.sources]
ninja-core = { workspace = true }
ninja-test-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_test_app"]
