[project]
name = "ninja-agents"
version = "0.1.0"
description = "Agent orchestration & ADK integration for Ninja Stack"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ninja-core",
    "ninja-models",
    "google-adk>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_agents"]
