[project]
name = "ninja-boundary"
version = "0.1.0"
description = "Data tolerance & coercion layer for Ninja Stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "ninja-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_boundary"]

[tool.uv.sources]
ninja-core = { workspace = true }
