[project]
name = "ninja-codegen"
version = "0.1.0"
description = "Code generation & sync engine for Ninja Stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "jinja2>=3.1", "ninja-core", "ninja-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_codegen"]

[tool.uv.sources]
ninja-core = { workspace = true }
ninja-cli = { workspace = true }
