[project]
name = "ninja-core"
version = "0.1.0"
description = "Agentic Schema Definition (ASD) core models"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_core"]
