[project]
name = "ninja-deploy"
version = "0.1.0"
description = "K8s/Helm deployment pipeline generator for Ninja Stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "jinja2>=3.1", "ninja-core", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_deploy"]

[tool.uv.sources]
ninja-core = { workspace = true }
