[project]
name = "ninja-devloop"
version = "0.1.0"
description = "Board controller and dev-loop orchestration for NinjaStack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "typer>=0.15"]

[project.scripts]
ninja-board = "ninja_devloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_devloop"]
