[project]
name = "ninja-graph"
version = "0.1.0"
description = "Graph-RAG bootstrapper for Ninja Stack — builds and maintains knowledge graphs from ASD"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ninja-core",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_graph"]
