[project]
name = "ninja-introspect"
version = "0.1.0"
description = "Polyglot database introspection engine for Ninja Stack"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ninja-core",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "motor>=3.0",
    "neo4j>=5.0",
    "chromadb>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_introspect"]
