[project]
name = "ninja-models"
version = "0.1.0"
description = "LiteLLM integration & model routing for Ninja Stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "litellm>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_models"]
