[project]
name = "ninja-ui"
version = "0.1.0"
description = "UI generation for Ninja Stack (CRUD viewer + Agentic chat)"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "jinja2>=3.1", "ninja-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninja_ui"]

[tool.uv.sources]
ninja-core = { workspace = true }
